--- a/app/src/main/res/layout-v23/fragment_third.xml
+++ b/app/src/main/res/layout-v23/fragment_third.xml
@@ -73,7 +73,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_question_three" />
 
+    <!-- lottie animation view п.5 -->
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lottie_view"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        app:layout_constraintBottom_toTopOf="@id/b_toRepeat"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_answer_three"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/plant_jump"
+        />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
