--- a/app/src/main/res/layout-v23/fragment_second.xml
+++ b/app/src/main/res/layout-v23/fragment_second.xml
@@ -29,7 +29,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="15dp"
                     android:gravity="center"
-                    android:text="Вопрос 1"
+                    android:text="@string/_1"
                     android:textSize="16sp"
                     android:textStyle="italic" />
 
@@ -37,25 +37,25 @@
                     android:id="@+id/rb_answer_one_on_q_one"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="ответ 1" />
+                    android:text="@string/answer_1" />
 
                 <RadioButton
                     android:id="@+id/rb_answer_two_on_q_one"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="ответ 2" />
+                    android:text="@string/answer_2" />
 
                 <RadioButton
                     android:id="@+id/rb_answer_three_on_q_one"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="ответ 3" />
+                    android:text="@string/answer_3" />
 
                 <RadioButton
                     android:id="@+id/rb_answer_four_on_q_one"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="ответ 4" />
+                    android:text="@string/answer_4" />
             </RadioGroup>
 
             <RadioGroup
@@ -69,7 +69,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="15dp"
                     android:gravity="center"
-                    android:text="Вопрос 2"
+                    android:text="@string/question_2"
                     android:textSize="16sp"
                     android:textStyle="italic" />
 
@@ -77,25 +77,25 @@
                     android:id="@+id/rb_answer_one_on_q_two"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="ответ 1" />
+                    android:text="@string/answer_21" />
 
                 <RadioButton
                     android:id="@+id/rb_answer_two_on_q_two"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="ответ 2" />
+                    android:text="@string/answer_22" />
 
                 <RadioButton
                     android:id="@+id/rb_answer_three_on_q_two"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="ответ 3" />
+                    android:text="@string/answer_23" />
 
                 <RadioButton
                     android:id="@+id/rb_answer_four_on_q_two"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="ответ 4" />
+                    android:text="@string/answer_24" />
             </RadioGroup>
 
             <RadioGroup
@@ -109,7 +109,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="15dp"
                     android:gravity="center"
-                    android:text="Вопрос 3"
+                    android:text="@string/question_3"
                     android:textSize="16sp"
                     android:textStyle="italic" />
 
@@ -117,25 +117,25 @@
                     android:id="@+id/rb_answer_one_on_q_three"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="ответ 1" />
+                    android:text="@string/answer_31" />
 
                 <RadioButton
                     android:id="@+id/rb_answer_two_on_q_three"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="ответ 2" />
+                    android:text="@string/answer_32" />
 
                 <RadioButton
                     android:id="@+id/rb_answer_three_on_q_three"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="ответ 3" />
+                    android:text="@string/answer_33" />
 
                 <RadioButton
                     android:id="@+id/rb_answer_four_on_q_three"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="ответ 4" />
+                    android:text="@string/answer_34" />
             </RadioGroup>
 
 
